# stgiii_simulate

./: README.md  additional_strategy_plan.md  cli_simulator_plan.md  codex_bayesian_modify_plan_v1.0.md  codex_gen_model_modify_v1.0.md  codex_operator_modify_plan_v1.0.md  environment.yml  pyproject.toml  requirements.txt  run_app.py  stageIII_simulator_design_spec_v0_1.md  stageIII_simulator_requirements_v0_1.md
.claude/: settings.local.json
app/: __init__.py  display.py  main.py  sidebar.py  utils.py
cli_simulator/: __init__.py  __main__.py  config_builder.py  main.py  reporter.py  runner.py
cli_simulator/stgiii_core/: __init__.py  config.py  exceptions.py  matrix.py  results.py  simulation.py
cli_simulator/stgiii_core/operators/: __init__.py  base.py  registry.py
stgiii_core/: __init__.py  config.py  disclosure.py  indexer.py  matrix.py  results.py  simulation.py
stgiii_core/operators/: __init__.py  base.py  bayesian_fw.py  fw_interactions.py  fw_ols.py  fw_ridge.py  random_operator.py
tests/: __init__.py  sample_matrix_data_demo.csv  test_disclosure.py  test_indexer.py  test_integration.py  test_operators.py  test_simulation.py
