[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "stgiii-simulate"
version = "0.1.0"
description = "StageIII Simulator - Combinatorial Synthesis Stage Simulator for Drug Discovery"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "StageIII Simulator Team"}
]
keywords = ["drug-discovery", "simulation", "combinatorial-chemistry", "machine-learning"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Chemistry",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "numpy>=1.24",
    "scipy>=1.11",
    "scikit-learn>=1.3",
    "pandas>=2.0",
    "matplotlib>=3.7",
    "streamlit>=1.28",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
    "pytest-cov>=4.1",
    "mypy>=1.5",
    "black>=23.0",
    "isort>=5.12",
    "flake8>=6.1",
    "pandas-stubs",
    "types-requests",
]

[project.scripts]
stgiii-simulate = "app.main:main"

[project.urls]
"Homepage" = "https://github.com/example/stgiii-simulate"
"Bug Tracker" = "https://github.com/example/stgiii-simulate/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["stgiii_core*", "app*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "-v --tb=short"

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
strict_optional = true
warn_redundant_casts = true
warn_unused_ignores = true

[[tool.mypy.overrides]]
module = [
    "sklearn.*",
    "scipy.*",
    "streamlit.*",
    "matplotlib.*",
]
ignore_missing_imports = true

[tool.black]
line-length = 88
target-version = ['py310', 'py311']
include = '\.pyi?$'
extend-exclude = '''
/(
    \.eggs
  | \.git
  | \.mypy_cache
  | \.pytest_cache
  | \.venv
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
line_length = 88
known_first_party = ["stgiii_core", "app"]
skip = [".venv", "build", "dist"]

[tool.coverage.run]
source = ["stgiii_core"]
branch = true
omit = ["tests/*", "app/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]
